tests/functional/lang/eval-fail-catAttrs-3.err.exp
error:
       … while calling the 'catAttrs' builtin
         at /pwd/lang/eval-fail-catAttrs-3.nix:1:1:
            1| builtins.catAttrs "foo" [ 1 ]
             | ^
            2|

       … while evaluating an element in the list passed as second argument to builtins.catAttrs

       error: expected a set but found an integer: 1
